<resources>
    <string name="text_progress">Загрузка…</string>
    <string name="text_disconnection">Нет подключения к Интернету!</string>
    <string name="text_check_internet">Проверьте подключение вашего устройства к Wi-Fi или мобильной сети.</string>
    <string name="text_about">Информация о приложении</string>
    <string name="text_version">Версия: 2.0</string>
    <string name="text_aboutApp1">Откройте для себя город с необычной стороны!</string>
    <string name="text_aboutApp2">Гик (от англ. geek, "чудик") - в современном понимании человек, глубоко увлеченный популярной культурой (комиксы, кинематограф, анимация, видеоигры, фэнтези и т.д.). Термин, объединяющий в себе и геймеров, и отаку, и кидалтов, и косплееров. Данное приложение поможет каждому гику найти места по вкусу!</string>
    <string name="text_host1">Вы проводите тематические фестивали или являетесь владелецем  необычного магазина, кафе или другого гик-места</string>
    <string name="text_host2">и хотите чтобы оно появилось здесь?</string>
    <string name="text_contact_us2">Напишите нам:</string>
    <string name="text_contact_us3">gd.pestov@yandex.ru</string>
    <string name="button_ok">Ок</string>
    <string name="text_main">Города</string>
    <string name="text_list">Места</string>
    <string name="text_home">Главная</string>
    <string name="text_map">Карта</string>
    <string name="text_profile">Профиль</string>
    <string name="app_name">GeekWay</string>
    <string name="app_logo">AppLogo</string>
    <string name="app_name1">Geek</string>
    <string name="app_name2">Way</string>
    <string name="text_enter">Авторизация</string>
    <string name="editText_email_enter">E-mail</string>
    <string name="editText_password_enter">Пароль</string>
    <string name="button_enter">Войти</string>
    <string name="text_enter_forgotpassword"><u>Забыли пароль?</u></string>
    <string name="text_havenot_account">У вас еще нет аккаунта? Пройдите регистрацию</string>
    <string name="button_registration">Регистрация</string>
    <string name="text_readme"><u>О приложении</u></string>
    <string name="error_enter_empty_fields">Все поля должны быть заполнены!</string>
    <string name="error_right_email">Проверьте правильность написания E-mail адреса!</string>
    <string name="error_right_auth">E-mail или пароль введены не верно!</string>
    <string name="error_auth">Авторизация не выполнена!</string>
    <string name="text_wellcome">С возвращением!</string>
    <string name="text_registration">Регистрация</string>
    <string name="editText_user_name">Ваше имя</string>
    <string name="editText_email">Ваш E-mail</string>
    <string name="editText_password">Придумайте пароль</string>
    <string name="editText_password_confirm">Подтвердите пароль</string>
    <string name="button_registration_account">Создать профиль</string>
    <string name="text_activate_account">У вас уже есть аккаунт? Пройдите авторизацию</string>
    <string name="button_enter_account">Войти</string>
    <string name="error_reg_empty_fields">Все поля должны быть заполнены!</string>
    <string name="error_reg_name_long">Имя слишком длинное!</string>
    <string name="error_reg_name_short">Имя слишком короткое!</string>
    <string name="error_reg_name_contain">Имя должно содержать только буквы! (пробелы и специальные символы не допускаются)</string>
    <string name="error_reg_email_right">Проверьте правильность написания E-mail адреса!</string>
    <string name="error_reg_pass_8">Пароль должен содержать минимум 8 символов!</string>
    <string name="error_reg_pass_1A">Пароль должен содержать минимум 1 заглавный символ!</string>
    <string name="error_reg_pass_1a">Пароль должен содержать минимум 1 строчный символ!</string>
    <string name="error_reg_pass_1n">Пароль должен содержать минимум 1 цифру!</string>
    <string name="error_reg_pass_1spec">Пароль должен содержать минимум 1 специальный символ! (!@#\$%^_+=)</string>
    <string name="error_reg_pass_compare">Пароли не совпадают!</string>
    <string name="text_reg_complite">Регистрация успешно завершена.</string>
    <string name="text_reg_not_complite">Регистрация не завершена!</string>
    <string name="text_reg_wellcome">Добро пожаловать!</string>
    <string name="error_email_exist">Введенный E-mail уже зарегестрирован!</string>
    <string name="text_forgot_password">Восстановление пароля</string>
    <string name="text_enter_email_forgot_password1">Введите адресс электронной почты вашего профиля.</string>
    <string name="text_enter_email_forgot_password2">На него будет отправлена ссылка для восстановления пароля.</string>
    <string name="editText_email_forgot_password">E-mail</string>
    <string name="button_forgot_password_submit">Отправить</string>
    <string name="button_forgot_password_cancel">Отмена</string>
    <string name="error_email_empty">Поле должно быть заполнено!</string>
    <string name="error_email_right">Проверьте правильность написания E-mail адреса!</string>
    <string name="text_check_email">Откройте полученное письмо в введеном E-mail.</string>
    <string name="text_email_not_exist">Введенный E-mail не зарегестрирован или был удален!</string>
    <string name="error_email_fail">Ошибка отправки ссылки для восстановления пароля!</string>
    <string name="text_email_complite">Ссылка для восстановления пароля успешно отправлена.</string>
    <string name="text_settings">Настройки</string>
    <string name="editText_name_settings">Имя пользователя</string>
    <string name="editText_email_settings">E-mail пользователя</string>
    <string name="editText_passconf_settings">Пароль для подтверждения</string>
    <string name="text_reset_password_settings"><u>Изменить пароль</u></string>
    <string name="button_save_settings">Сохранить</string>
    <string name="button_cancel_settings">Назад</string>
    <string name="error_set_name_long">Имя слишком длинное!</string>
    <string name="error_set_name_short">Имя слишком короткое!</string>
    <string name="error_set_name_contain">Имя должно содержать только буквы! (пробелы и специальные символы не допускаются)</string>
    <string name="error_set_email_right">Проверьте правильность написания E-mail адреса!</string>
    <string name="error_set_pass_empty">Введите ваш пароль для сохранения!</string>
    <string name="text_set_save">Настройки успешно сохранены.</string>
    <string name="error_set_pass_not_right">Введен неверный пароль!</string>
    <string name="text_reset_password">Изменить пароль</string>
    <string name="editText_resetpass_oldpass">Старый пароль</string>
    <string name="editText_resetpass_newpass">Новый пароль</string>
    <string name="editText_resetpass_confnewpass">Подтвердите пароль</string>
    <string name="button_save_resetpassword">Сохранить</string>
    <string name="button_cancel_resetpassword">Отмена</string>
    <string name="error_respass_empty_fields">Все поля должны быть заполнены!</string>
    <string name="error_respass_pass_8">Пароль должен содержать минимум 8 символов!</string>
    <string name="error_respass_pass_1A">Пароль должен содержать минимум 1 заглавный символ!</string>
    <string name="error_respass_pass_1a">Пароль должен содержать минимум 1 строчный символ!</string>
    <string name="error_respass_pass_1n">Пароль должен содержать минимум 1 цифру!</string>
    <string name="error_respass_pass_1spec">Пароль должен содержать минимум 1 специальный символ! (!@#\$%^_+=)</string>
    <string name="error_respass_pass_compare">Пароли не совпадают!</string>
    <string name="text_respass_pass_save">Пароль успешно изменен.</string>
    <string name="error_respass_pass_not_right">Введен неверный пароль!</string>
    <string name="text_admin">Администратор</string>
    <string name="text_admin_name">Имя:</string>
    <string name="text_admin_email">E-mail:</string>
    <string name="button_admin_database">Список городов</string>
    <string name="button_admin_bdplaces">Список мест</string>
    <string name="button_admin_settings">Настройки</string>
    <string name="button_admin_exit">Выйти</string>
    <string name="text_admin_readme"><u>О приложении</u></string>
    <string name="button_admin_db">База данных</string>
    <string name="text_database">Города</string>
    <string name="editText_city_search">Поиск города…</string>
    <string name="button_add_city">Добавить город</string>
    <string name="button_cancel_database">Назад</string>
    <string name="text_delite_city">Удалить</string>
    <string name="text_shure_delite_city">Вы уверены что хотите удалить данную запись?</string>
    <string name="text_yes">Да</string>
    <string name="text_deliting">Удаление...</string>
    <string name="text_cancel_delite_city">Отмена</string>
    <string name="text_deliting_complite">Запись удалена.</string>
    <string name="text_deliting_error">Ошибка удаления!</string>
    <string name="text_deliting_citysCategories_complite">Дочерние категории удалены.</string>
    <string name="text_deliting_citysPlaces_complite">Дочерние места и мероприятия удалены.</string>
    <string name="text_categories">Категории</string>
    <string name="text_preferences">Предпочтения</string>
    <string name="editText_category_search">Поиск категории…</string>
    <string name="button_add_category">Добавить категорию</string>
    <string name="button_cancel_categories">Назад</string>
    <string name="text_delite_category">Удалить</string>
    <string name="text_shure_delite_category">Вы уверены что хотите удалить данную запись?</string>
    <string name="text_yes_delite_category">Да</string>
    <string name="text_deliting_category">Удаление...</string>
    <string name="text_cancel_delite_category">Отмена</string>
    <string name="text_deliting_category_complite">Запись удалена.</string>
    <string name="text_deliting_category_error">Ошибка удаления!</string>
    <string name="text_delite_categoryPref">Категория удалена из Предпочтений.</string>
    <string name="error_delite_categoryPref">Ошибка удаления из Предпочтений!</string>
    <string name="text_places">Мероприятия/места</string>
    <string name="editText_place_search">Поиск места/мероприятия…</string>
    <string name="button_cancel_places">Назад</string>
    <string name="button_add_place">Добавить новое</string>
    <string name="button_add_new_place">Добавить место/мероприятие</string>
    <string name="text_categoryAdd_preference">Категория добавлена в Предпочтения.</string>
    <string name="error_categoryAdd_preference">Ошибка добавления в Предпочтения!</string>
    <string name="text_categoryDel_preference">Категория удалена из Предпочтений.</string>
    <string name="error_categoryDel_preference">Ошибка удаления из Предпочтений!</string>
    <string name="button_place_addPref"><u>Добавить в Предпочтения</u></string>
    <string name="button_place_remPref"><u>Убрать из Предпочтений</u></string>
    <string name="text_ratind_0">нет оценок</string>
    <string name="text_comments_0">0</string>
    <string name="text_edit_place">Изменить</string>
    <string name="text_delite_place">Удалить</string>
    <string name="button_save_editplace">Сохранить</string>
    <string name="button_cancel_addcity">Отмена</string>
    <string name="editText_city_name">Название города</string>
    <string name="text_photo_city">Фотография города (нажмите, чтобы добавить)</string>
    <string name="editText_city_description">Описание города</string>
    <string name="text_user">Профиль</string>
    <string name="button_user_db">Путеводитель</string>
    <string name="button_user_map">Карта</string>
    <string name="button_user_selection">Адаптивный подбор</string>
    <string name="button_user_favorites">Избранное</string>
    <string name="button_user_preferences">Предпочтения</string>
    <string name="button_user_settings">Настройки</string>
    <string name="button_user_exit">Выйти</string>
    <string name="editcyty_text">Изменить город</string>
</resources>