<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".admin.EditCityActivity">

        <FrameLayout
            android:id="@+id/frameNameLogo"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageWhiteScreen"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:contentDescription="image"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/geekway_whitescreen" />

            <ImageView
                android:id="@+id/imageNameLogo"
                android:layout_width="65sp"
                android:layout_height="50sp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:contentDescription="image"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.555"
                app:srcCompat="@drawable/geekway" />

        </FrameLayout>

    <TextView
        android:id="@+id/textEditPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/press_start_2p"
        android:text="@string/editcyty_text"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameNameLogo" />

    <EditText
        android:id="@+id/editCityName"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:autofillHints="userName"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_city_icon"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/editText_city_name"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEditPlace" />

    <EditText
        android:id="@+id/editCityDescription"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/editText_city_description"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCityName" />

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCityDescription"
        app:srcCompat="@drawable/ic_image" />

    <TextView
        android:id="@+id/textPlacePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/oswald"
        android:text="@string/text_photo_city"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view" />

    <Button
        android:id="@+id/buttonSaveCity"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_button"
        android:fontFamily="sans-serif-black"
        android:text="@string/button_save_editplace"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPlacePhoto" />

        <Button
            android:id="@+id/buttonCancelEditCity"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/custom_button"
            android:fontFamily="sans-serif-black"
            android:text="@string/button_cancel_addcity"
            android:textAllCaps="false"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>